editor tree working
